formatting and placeholder post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
 
     <a class="site-title" style="font-size:44px" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
-	<p class="text">{{ site.description }}</p>
+	<p><br><br></p>
+	<div class="text">{{ site.description }}</div>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
